--- a/chores/templates/chores/base.html
+++ b/chores/templates/chores/base.html
@@ -6,6 +6,9 @@
 <body>
     <header>
         <h1>ChoreMinder</h1>
+        {% if user.is_authenticated %}
+            <a href="{% url "logout" %}">Logout</a>
+        {% endif %}
     </header>
     <section>
         <h1>{{ title }}</h1>
