improve styles and add user name and admin link to header

--- a/chores/templates/chores/chore_form.html
+++ b/chores/templates/chores/chore_form.html
@@ -2,7 +2,7 @@
 {% block content %}
     <form action="{{ url }}" method="post">
         {% csrf_token %}
-        {{ form }}
-        <input type="submit" value="Save">
+        {{ form.as_p }}
+        <p><input type="submit" value="Save"></p>
     </form>
 {% endblock %}
