--- a/chores/templates/chores/base.html
+++ b/chores/templates/chores/base.html
@@ -2,17 +2,32 @@
 <html>
 <head>
     <title>{{ title }} | ChoreMinder</title>
+    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
 </head>
 <body>
     <header>
-        <h1>ChoreMinder</h1>
+        <h1><a href="{% url "chores:index" %}">ChoreMinder</a></h1>
         {% if user.is_authenticated %}
-            <a href="{% url "logout" %}">Logout</a>
+            <p>
+                Welcome, {{ user.first_name|default:user.username }}.
+                <a href="{% url "logout" %}">Logout</a>
+                {% if user.is_superuser %}
+                <p>
+                    <a href="{% url "admin:index" %}" target="_blank">
+                        Admin
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="ml-1" style="width: 0.8em; height: 0.8em;">
+                            <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
+                            <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
+                        </svg>
+                    </a>
+                </p>
+                {% endif %}
+            </p>
         {% endif %}
     </header>
-    <section>
+    <main>
         <h1>{{ title }}</h1>
         {% block content %}{% endblock %}
-    </section>
+    </main>
 </body>
 </html>
