--- a/chores/templates/chores/chore_form.html
+++ b/chores/templates/chores/chore_form.html
@@ -20,7 +20,7 @@
             <p>{{ form.due_duration.help_text | safe }}</p>
             <p>
                 This field should be formatted as
-                <code>&lt;days&gt; &lt;hours&gt;:&lt;minutes&gt;</code>.
+                <code>&lt;days&gt; &lt;hours&gt;:&lt;minutes&gt;:&lt;seconds&gt;</code>.
             </p>
             {{ form.due_duration }}
             {{ form.due_duration.errors }}
@@ -31,7 +31,7 @@
             <p>{{ form.overdue_duration.help_text | safe }}</p>
             <p>
                 This field should be formatted as
-                <code>&lt;days&gt; &lt;hours&gt;:&lt;minutes&gt;</code>.
+                <code>&lt;days&gt; &lt;hours&gt;:&lt;minutes&gt;:&lt;seconds&gt;</code>.
             </p>
             {{ form.overdue_duration }}
             {{ form.overdue_duration.errors }}
