--- a/chores/templates/chores/base.html
+++ b/chores/templates/chores/base.html
@@ -13,6 +13,7 @@
             <p>
                 Welcome, {{ user.first_name|default:user.username }}.
                 <a href="{% url "logout" %}">Logout</a>
+                <p><a href="{% url "chores:list_categories" %}">Categories</a></p>
                 {% if user.is_superuser %}
                 <p>
                     <a href="{% url "admin:index" %}" target="_blank">
