--- a/chores/templates/chores/base.html
+++ b/chores/templates/chores/base.html
@@ -14,6 +14,7 @@
                 Welcome, {{ user.first_name|default:user.username }}.
                 <a href="{% url "logout" %}">Logout</a>
                 <p><a href="{% url "chores:list_tags" %}">Tags</a></p>
+                <p><a href="{% url "chores:list_away_dates" %}">Away Dates</a></p>
                 {% if user.is_superuser %}
                 <p>
                     <a href="{% url "admin:index" %}" target="_blank">
