--- a/chores/templates/chores/index.html
+++ b/chores/templates/chores/index.html
@@ -9,41 +9,43 @@
 </form>
 {% endif %}
 
-{% if chores %}
-<table>
-    <tr>
-        <th>Name</th>
-        <th>Description</th>
-        <th>Tags</th>
-        <th>Last done</th>
-        <th>Next due</th>
-        <th>Status</th>
-        <th>Weight</th>
-        <th>Actions</th>
-    </tr>
-    {% for chore in chores %}
-    <tr>
-        <td>{{ chore.name }}</td>
-        <td>{{ chore.description }}</td>
-        <td>{{ chore.tags | format_tag_list }}</td>
-        <td>{{ chore.latest_log.timestamp }}</td>
-        <td>{{ chore.status.next_due | default:"" }}</td>
-        <td>{{ chore.status.state }}</td>
-        <td>{{ chore.weight }}</td>
-        <td style="text-align: center">
+{% for group_name, chores in chore_groups.items %}
+<details{% if forloop.counter == 1 %} open{% endif %}>
+    <summary><h2>{{ group_name }}</h2></summary>
+    {% if chores %}
+    <ul>
+        {% for chore in chores %}
+        <li>
+            <h3>{{ chore.name }}</h3>
+            {% if chore.tags %}
+            <ul>
+                {% for tag in chore.tags %}
+                <li>{{ tag.name }}</li>
+                {% endfor %}
+            </ul>
+            {% endif %}
+            <p>{{ chore.description }}</p>
             <form action="{% url "chores:log_chore" chore.id %}" method="POST">
                 {% csrf_token %}
                 <input type="submit" value="Mark Done">
             </form>
-            <a href="{% url "chores:edit_chore" chore.id %}">Edit</a>
-            <a href="{% url "chores:delete_chore" chore.id %}">Delete</a>
-        </td>
-    </tr>
-    {% endfor %}
-</table>
-{% else %}
+            <p>
+                Next Due: {{ chore.status.next_due | default:"" }}
+                |
+                <a href="{% url "chores:edit_chore" chore.id %}">Edit</a>
+                <a href="{% url "chores:delete_chore" chore.id %}">Delete</a>
+            </p>
+        </li>
+        {% endfor %}
+    </ul>
+    {% else %}
+    <p>No chores to display.</p>
+    {% endif %}
+</details>
+{% empty %}
 <p>No chores to display.</p>
-{% endif %}
+{% endfor %}
+
 <p>
     <a href="{% url "chores:add_chore" %}">Add Chore</a>
 </p>
