add custom styles for the chores page

--- a/chores/templates/chores/base.html
+++ b/chores/templates/chores/base.html
@@ -7,6 +7,7 @@
     <title>{{ title }} | ChoreMinder</title>
     <link rel="shorcut icon" href="{% static 'chores/img/favicon.png' %}">
     <link rel="stylesheet" href="{% static 'chores/css/main.css' %}">
+    {% block header %}{% endblock %}
 </head>
 <body>
     <header>
