--- a/chores/static/chores/css/main.css
+++ b/chores/static/chores/css/main.css
@@ -1,8 +1,65 @@
+/********************
+ ** Element Styles **
+ ********************/
+
 body {
     max-width: 900px;
     margin: 0 auto;
     padding: 0 20px;
 }
+
+a {
+    color: #004000;
+}
+
+a:hover {
+    filter: brightness(2);
+}
+
+input[type="submit"],
+.button {
+    appearance: none;
+    border: none;
+    border-radius: 1em;
+    font-size: 1rem;
+    background-color: #008000;
+    color: white;
+    padding: 0.5em 0.8em;
+    text-decoration: none;
+}
+
+input[type="submit"]:hover,
+.button:hover {
+    filter: brightness(1.4);
+    cursor: pointer;
+}
+
+label {
+    display: block;
+}
+
+fieldset {
+    border: 1px solid #687d68;
+    padding: 1em;
+    border-radius: 1em;
+    margin-bottom: 1em;
+}
+
+textarea,
+select,
+input {
+    display: inline-block;
+    border-radius: 0.5em;
+    border: 1px solid black;
+    box-shadow: none;
+    max-width: 100%;
+    padding: 0.5em;
+    /* margin-bottom: 0.5rem; */
+}
+
+/*******************
+ ** Header Styles **
+ *******************/
 
 header {
     display: flex;
@@ -12,15 +69,10 @@ header {
 
 header a {
     display: inline-block;
-    color: #004000;
     text-decoration: none;
     height: 3rem;
     line-height: 3rem;
     transition: filter 0.2s ease-in-out;
-}
-
-header a:hover {
-    filter: brightness(2);
 }
 
 header>a {
