update all add links to button styles

--- a/chores/static/chores/css/main.css
+++ b/chores/static/chores/css/main.css
@@ -57,6 +57,16 @@ input {
     /* margin-bottom: 0.5rem; */
 }
 
+
+/********************
+ ** Utility Styles **
+ ********************/
+
+.right {
+    text-align: right;
+}
+
+
 /*******************
  ** Header Styles **
  *******************/
