improve colors for tags

--- a/chores/static/chores/css/chores.css
+++ b/chores/static/chores/css/chores.css
@@ -56,8 +56,8 @@ details ul.tag-list>li {
     display: inline;
     padding: 0.4em 0.6em;
     border-radius: 1em;
-    background: #008000;
-    color: white;
+    background: #ecf4e1;
+    color: #317029;
 }
 
 details p.footer {
