render chores that have never been completed with "Never Completed" in the next due

--- a/chores/templates/chores/index.html
+++ b/chores/templates/chores/index.html
@@ -35,7 +35,7 @@
                 {% endif %}
                 <p>{{ chore.description }}</p>
                 <p class="footer">
-                    Next Due: {{ chore.status.next_due | default:"" }}
+                    Next Due: {{ chore.status.next_due | default:"Never Completed" }}
                 </p>
             </div>
             <div class="right">
