--- a/chores/templates/chores/index.html
+++ b/chores/templates/chores/index.html
@@ -27,7 +27,7 @@
     <ul>
         {% for chore in chores %}
         <li>
-            <div class="left">
+            <div class="details">
                 <h3>{{ chore.name }}</h3>
                 {% if chore.tags %}
                 <ul class="tag-list">
@@ -41,7 +41,7 @@
                     Next Due: {{ chore.status.next_due | default:"Never Completed" }}
                 </p>
             </div>
-            <div class="right">
+            <div class="actions">
                 <form action="{% url "chores:log_chore" chore.id %}" method="POST">
                     {% csrf_token %}
                     <input type="submit" value="Mark Done">
@@ -50,6 +50,12 @@
                     <li><a href="{% url "chores:edit_chore" chore.id %}">Edit</a></li>
                     <li><a href="{% url "chores:delete_chore" chore.id %}">Delete</a></li>
                 </ul>
+            </div>
+            <div class="status" title="Current Status: {{ chore.status.state }}">
+                {% if chore.status.next_state %}
+                <div class="progress state-{{ chore.status.next_state | lower }}" style="flex-grow:{{ chore.status.percentage }}"></div>
+                {% endif %}
+                <div class="progress state-{{ chore.status.state | lower }}" style="flex-grow:{{ 100 | subtract:chore.status.percentage }}"></div>
             </div>
         </li>
         {% endfor %}
